feat: add new translations

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -276,29 +276,36 @@
         "description": "Description"
     },
     "voucher": {
-        "label": "Receipt",
-        "pay": "online payment",
+        "label": "Voucher",
+        "pay": "Online payment",
+        "subscription": "Subscription",
         "PaymentMade": "Payment made by",
-        "InvoiceNumber" : "Invoice number",
-        "PaymentDescription": "Payment Description",
-        "Reference": "Reference number",
-        "date": "Date and time of the transaction",
+        "subscriptionMade": "Subscription made by",
+        "planInformation": "Plan information",
+        "planName": "Plan name",
+        "subscriptionPeriod": "Number of periods",
+        "periodCount": "Subscription period",
+        "InvoiceNumber": "Invoice number",
+        "PaymentDescription": "Payment description",
+        "Reference": "Reference",
+        "date": "Transaction date and time",
         "currency": "Currency",
-        "paid": "Value paid",
-        "product" : "Product",
-        "state": "State"
+        "paid": "Paid amount",
+        "product": "Product",
+        "state": "Status",
+        "print": "Print Voucher"
     },
     "subscription": {
         "subscriptions" : "Subscriptions",
-        "label" : "Subscription plans",
-        "name": "Name",
+        "label" : "Subscription Plans",
+        "name" : "Name",
         "amount": "Amount",
         "subscription_period": "Subscription Period",
         "expiration_time": "Expiration Time",
         "description": "Description",
-        "newSubscriptionPlan": "New Subscription Plan",
+        "newSubscriptionPlan" : "New Subscription Plan",
         "updateSubscriptionPlan": "Update Subscription Plan",
-        "addDescription": "Add description",
+        "addDescription": "Add Description",
         "createSubscription": "Create Subscription",
         "daily" : "Daily",
         "weekly": "Weekly",
@@ -306,10 +313,19 @@
         "yearly": "Yearly",
         "Preview": "Preview",
         "Default": "Default Color",
-        "chooseYourPlan": "Choose your plan",
-        "totalPrice" : "Total price",
+        "chooseYourPlan" : "Choose Your Plan",
+        "totalPrice" : "Total Price",
         "additional_info": "Additional Information",
-        "expiration_additional_info": "Expiration information",
-        "noSubscriptions": "It looks like there are no subscriptions available yet. Check back later!"
+        "expiration_additional_info": "Expiration Information",
+        "noSubscriptions" : "It looks like there are no subscriptions available yet. Come back later!",
+        "reference": "Reference",
+        "subscriptionPlans": "PLan",
+        "surname": "Last Name",
+        "date": "Start Date",
+        "status": "Status",
+        "microsite": "Microsite",
+        "detailer": "Subscription Detail",
+        "list": "List of Subscriptions",
+        "cancelSubscription" : "Cancel Subscription"
     }
 }
