--- a/resources/js/Locales/es.json
+++ b/resources/js/Locales/es.json
@@ -331,7 +331,12 @@
         "selectedSubscription" : "Suscripción Seleccionada",
         "send" : "Enviar",
         "return" : "Volver",
-        "currency": "Moneda"
+        "currency": "Moneda",
+        "editSubscription" : "Editar subscripción",
+        "continue" : "Continuar",
+        "changePlan": "Cambiar de plan",
+        "paymentMethod": "Método de pago actual",
+        "creditCard": "Tarjeta de credito"
     },
     "invoices": {
         "title" : "Facturas",
