feat: add news translations

--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -1,4 +1,5 @@
 {
+    "total_records": "Total records",
     "about": "About",
     "all_rights_reserved": "All rights reserved.",
     "categories": "Categories",
