--- a/resources/js/Locales/es.json
+++ b/resources/js/Locales/es.json
@@ -1,4 +1,5 @@
 {
+    "total_records": "Registros totales",
     "about": "Acerca de",
     "all_rights_reserved": "Todos los derechos reservados.",
     "categories": "Categorias",
