--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -145,7 +145,10 @@
         "confirm_password": "Confirm password",
         "cancel": "Cancel",
         "email": "Email",
-        "name": "Name",
+        "name": "First name",
+        "surname": "Last name",
+        "document_type": "Document type",
+        "document": "Document",
         "password": "Password",
         "profile": "My profile",
         "profile_information": "Profile information",
@@ -154,15 +157,15 @@
         "update_password": "Update password",
         "update_password_additional": "Make sure your account uses a long, random password to maintain security.",
         "current_password": "Current password",
-        "new_password": "New password",
-        "delete_account": "Delete account",
-        "delete_account_additional": "After your account is deleted, all of your resources and data will be permanently deleted. Before you delete your account, please download any data or information that you want to keep.",
+        "new_password": "New Password",
+        "delete_account": "Delete Account",
+        "delete_account_additional": "After deleting your account, all of your resources and data will be permanently deleted. Before deleting your account, please download any data or information you wish to keep.",
         "are_you_sure_delete": "Are you sure you want to delete your account?",
-        "are_you_sure_delete_additional": "After your account is deleted, all of your resources and data will be permanently deleted. Enter your password to confirm that you want to permanently delete your account.",
-        "update_user": "Update user",
-        "list_users": "List of users",
+        "are_you_sure_delete_additional": "After deleting your account, all of your resources and data will be permanently deleted. Please enter your password to confirm that you wish to permanently delete your account.",
+        "update_user": "Update User",
+        "list_users": "List of Users",
         "roles": "Roles",
-        "create_user": "Create user"
+        "create_user": "Create User"
     },
     "welcome": "Welcome",
     "welcome_title": "Welcome to microsites",
@@ -374,5 +377,18 @@
         "completed": "Completed",
         "failed": "Failed",
         "completed_with_errors": "Completed with errors"
-    }
+    },
+    "Forgot_your_password": "Forgot your password? No problem. Just provide us with your email address and we'll send you a password reset link that will allow you to choose a new one.",
+    "email": "Email",
+    "Reset_password": "Reset Password",
+    "password": "Password",
+    "Reset_password_instructions": "Password reset instructions",
+    "If_you_did_not_request_a_password_reset": "If you did not request a password reset, you will not have any problems. You can continue using our app without any problems.",
+    "reset_password": "Reset Password",
+    "send_password_reset_link": "Send link to email",
+    "password_reset_link_sent": "Password reset link sent!",
+    "check_your_email": "Check your email for the reset link password.",
+    "confirm_password": "Confirm Password",
+    "your_password_has_been_reset": "Your password has been reset!",
+    "if_you_did_not_request_a_password_reset": "If you did not request a password reset, you will not have any problems. You can continue using our app without any problems."
 }
