--- a/resources/js/Locales/es.json
+++ b/resources/js/Locales/es.json
@@ -196,6 +196,10 @@
     },
     "payment_status": {
         "PENDING" : "Pendiente",
+        "ACTIVE" : "Activo",
+        "CANCELLED" : "Cancelado",
+        "PAUSED" : "Pausado",
+        "EXPIRED" : "Expirado",
         "APPROVED" : "Aprobado",
         "REJECTED" : "Rechazado",
         "APPROVED_PARTIAL" : "Aprobado Parcialmente",
