--- a/resources/js/Locales/en.json
+++ b/resources/js/Locales/en.json
@@ -416,24 +416,38 @@
         "processing": "Processing",
         "completed": "Completed",
         "failed": "Failed",
-        "completed_with_errors": "Completed with errors"
+        "completed_with_errors": "Completed with errors",
+        "expiration_date": "Due date",
+        "late_payment": "Payment Reminder",
+        "total_with_increment": "Total with increment",
+        "invoice_expired_on": "We want to remind you that the selected invoice with due date on",
+        "expired": " has expired",
+        "fixed_increment": "Fixed increment",
+        "percentage_increment": "Percentage increment",
+        "convenience": "For your convenience, here is the breakdown of the charges to be paid",
+        "cancel": "Cancel",
+        "continue_payment": "Continue payment"
     },
-    "Forgot_your_password": "Forgot your password? No problem. Just provide us with your email address and we'll send you a password reset link that will allow you to choose a new one.",
+    "Forgot_your_password": "Forgot your password? No problem. Just tell us your email address and we will send you a link to reset your password which will allow you to choose a new one.",
     "email": "Email",
-    "Reset_password": "Reset Password",
+    "Reset_password": "Reset password",
     "password": "Password",
     "Reset_password_instructions": "Password reset instructions",
-    "If_you_did_not_request_a_password_reset": "If you did not request a password reset, you will not have any problems. You can continue using our app without any problems.",
+    "If_you_did_not_request_a_password_reset": "If you did not request a password reset, you will be fine. You can continue using our app without any issues.",
     "reset_password": "Reset Password",
     "send_password_reset_link": "Send link to email",
     "password_reset_link_sent": "Password reset link sent!",
-    "check_your_email": "Check your email for the reset link password.",
+    "check_your_email": "Please check your email for the password reset link.",
     "confirm_password": "Confirm Password",
     "your_password_has_been_reset": "Your password has been reset!",
-    "if_you_did_not_request_a_password_reset": "If you did not request a password reset, you will not have any problems. You can continue using our application without problems.",
+    "if_you_did_not_request_a_password_reset": "If you did not request a password reset, you will be fine. You can continue using our app without any problems.",
     "seconds": "seconds",
     "minutes": "minutes",
     "hours": "hours",
     "fails": "If the subscription charge fails, it can be retried up to",
-    "timeInterval": "times with an interval of"
+    "timeInterval": "times with an interval of",
+    "delete_invoice": "Delete invoice",
+    "show_invoice": "Show invoice",
+    "process_payment": "Process payment",
+    "delete_register": "Delete record"
 }
